---
- tapOn:
    text: 'Open user menu'
- tapOn: 'Sign Out'
- tapOn: 'Sign Out'
- waitForAnimationToEnd
